# payment-server

./: concept.md
server/: Cargo.toml  Dockerfile  concept.md  schema.sql
server/benches/: payment_benchmark.rs
server/k8s/: payment-system.yaml
server/load-tests/: scenario.js  spike-test.js
server/monitoring/: alertmanager.yml  alerts.yml  docker-compose.yml  payment-dashboard.json  prometheus.yml
server/scripts/: rollback.sh
server/src/: feature_flags.rs  main.rs
server/src/auth/: crypto.rs  handlers.rs  middleware.rs  webauthn.rs
server/src/bank/: handlers.rs
server/src/contact/: handlers.rs  service.rs
server/src/fraud/: rules.rs  train_fraud_model.py
server/src/kyc/: handlers.rs
server/src/middleware/: jwt.rs  request_id.rs
server/src/payment/: models.rs  service.rs
server/src/qr/: service.rs
server/src/seeds/: transaction_history.sql
server/src/transaction/: handlers.rs  models.rs  service.rs
server/src/user/: handlers.rs  service.rs
server/src/wallet/: models.rs  wallet_service.rs
server/src/ws/: server.rs
server/tests/: wallet_service_test.rs
server/tests/canary/: canary_deployment.rs
server/tests/chaos/: db_crash.rs  redis_down.rs
server/tests/common/: mod.rs
server/tests/contract/: api_contract.rs  openapi.json
server/tests/deployment/: blue_green.rs  health_check.rs
server/tests/failure/: daily_limit.rs  insufficient_balance.rs
server/tests/integration/: api_gateway.rs  tracing.rs
server/tests/mutation/: README.md
server/tests/property/: payment.rs  wallet.rs
server/tests/security/: jwt.rs  rate_limiter.rs
server/tests/tracing/: distributed_tracing.rs
(+46 files in other folders)
