[package]
name = "payment-server"
version = "0.1.0"
edition = "2024"

[dependencies]
opentelemetry-jaeger = "0.19"
redis = { version = "0.24", features = ["tokio-comp"] }


#api-gateway
axum = "0.7"
tokio = { version = "1.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
redis = { version = "0.24", features = ["tokio-comp"] }
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = "0.16"
uuid = { version = "1.6", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
opentelemetry = { version = "0.20", features = ["trace"] }
opentelemetry-jaeger = "0.19"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

#auth-service
jsonwebtoken = "8"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"


#fraud-service
nats = "0.22"
tokio = { version = "1.3", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
reqwest = { version = "0.11", features = ["json"] }
metrics = "0.21"


#Qr code
qrcode = "0.12"
image = "0.24"


#fraud
tract-onnx = "0.21"


#kyc-provider
axum = "0.7"
tokio = { version = "1.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tracing = "0.1"
uuid = { version = "1.6", features = ["v4"] }


